# homewatch

./: .gitignore  LICENSE  README.md  config.json  mailer.py  pyproject.toml  requirements.txt  surveillance.py
