[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "homewatch"
version = "0.1.0"
description = "Home surveillance and motion detection with a webcam"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "opencv-python>=4.0",
]

[project.scripts]
homewatch = "surveillance:main"
