[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "homewatch"
version = "0.1.0"
description = "Home surveillance and motion detection with a webcam"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "opencv-python>=4.0",
]

[tool.setuptools]
py-modules = ["surveillance", "mailer"]

[project.scripts]
homewatch = "surveillance:main"
